--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([35.6812, 139.7671], 13); // 東京駅付近
+    const map = L.map('map').setView([36.689, 139.063], 13);
 
     L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap contributors'
